--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.0/angular-route.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js"></script>
 
-		<script src="/js/index.js"></script>
+		<script src="/app/index.js"></script>
 		<link rel="stylesheet" href="/css/custom.css" type="text/css">
 	</head>
 
