--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 		<script src="/lib/angular/angular.js"></script>
 		<script src="/lib/angular-route/angular-route.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js"></script>
+		<script src="/lib/moment/min/moment.min.js"></script>
 
 		<script src="/app/js/index.js"></script>
 		<link rel="stylesheet" href="/css/custom.css" type="text/css">
