Pull in About modal content to card tooltips

--- a/public/index.html
+++ b/public/index.html
@@ -54,21 +54,27 @@
 					information about past violations that may be useful to know about. Additional data sets will be added in the future.
 				</p>
 				<h3 class="ui header">Data Sets Currently Available</h3>
-				<h4 class="ui header">AirNow</h4>
-				<p>
-					These data show air quality information for key particulates and pollutants that are indicators of overall air quality.
-					Data for today and the next 2 days are displayed using Green/Yellow/Red color coded indicators.
-				</p>
-				<h4 class="ui header">Ultraviolet (UV) Conditions</h4>
-				<p>
-					This data set provides a numeric UV quality index representing an overall measure of air quality for a location.
-				</p>
-				<h4 class="ui header">Safe Drinking Water Act Information Systems (SDWIS)</h4>
-				<p>
-					These data show a history of reporting and measuring violations and exceedances of regulated contaminants that are greater than the
-					agreed upon maximum level allowed in safe drinking water. These data provide a longer-term view of the history of violations in a
-					specific geographic area, at a particular water well, or from a regulated water system.
-				</p>
+				<div id="air">
+					<h4 class="ui header">AirNow</h4>
+					<p>
+						These data show air quality information for key particulates and pollutants that are indicators of overall air quality.
+						Data for today and the next 2 days are displayed using Green/Yellow/Red color coded indicators.
+					</p>
+				</div>
+				<div id="uv">
+					<h4 class="ui header">Ultraviolet (UV) Conditions</h4>
+					<p>
+						This data set provides a numeric UV quality index representing an overall measure of air quality for a location.
+					</p>
+				</div>
+				<div id="water">
+					<h4 class="ui header">Safe Drinking Water Act Information Systems (SDWIS)</h4>
+					<p>
+						These data show a history of reporting and measuring violations and exceedances of regulated contaminants that are greater than the
+						agreed upon maximum level allowed in safe drinking water. These data provide a longer-term view of the history of violations in a
+						specific geographic area, at a particular water well, or from a regulated water system.
+					</p>
+				</div>
 			</div>
 		</div>
 
