--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 			<div class="ui two column grid">
 				<div class="column">
 					<a href="/">
-						<img class="ui image" src="https://s3.amazonaws.com/stb-content/RAD.png" style="max-height: 80px;" />
+						<img class="ui image" src="/images/logo-epa.png" style="max-height: 80px;" />
 					</a>
 				</div>
 			</div>
