--- a/public/index.html
+++ b/public/index.html
@@ -39,21 +39,17 @@
 			<i class="close icon"></i>
 			<div class="header">
 				<i class="circular green leaf icon"></i>
-				About This Page
+				About This Site
 			</div>
 			<div class="content">
 				<p>
-					This page gathers environmental and health information that EPA provides through many systems and web sites into one screen view.
-					The user can select a location and available information related to air and water quality will be returned.  Some of the data are
-					real-time monitoring information about environmental conditions for the selected location. Other data provides longer term
-					information about past violations that may be useful to know about. Additional data sets will be added in the future.
+					This page gathers environmental and health information that EPA provides through many systems and web sites into one screen view. When the user selects a location, available information related to air and water quality will be provided. Some of the data sets are real-time monitoring information about environmental conditions for the selected location. Other data provides longer-term information about past violations, which may be useful. Additional data sets will be added in the future.
 				</p>
 				<h3 class="ui header">Data Sets Currently Available</h3>
 				<div id="air">
 					<h4 class="ui header">AirNow</h4>
 					<p>
-						These data show air quality information for key particulates and pollutants that are indicators of overall air quality.
-						Data for today and the next 2 days are displayed using Green/Yellow/Red color coded indicators.
+						This data set shows air quality information for key particulates and pollutants that indicate overall air quality. Data for today and the next 2-4 days are displayed using Green/Yellow/Red color-coded indicators.
 					</p>
 				</div>
 				<div id="uv">
@@ -63,11 +59,9 @@
 					</p>
 				</div>
 				<div id="water">
-					<h4 class="ui header">Safe Drinking Water Act Information Systems (SDWIS)</h4>
+					<h4 class="ui header">Safe Drinking Water Information Systems (SDWIS)</h4>
 					<p>
-						These data show a history of reporting and measuring violations and exceedances of regulated contaminants that are greater than the
-						agreed upon maximum level allowed in safe drinking water. These data provide a longer-term view of the history of violations in a
-						specific geographic area, at a particular water well, or from a regulated water system.
+						This data set shows a history of reporting and measuring violations, including when regulated contaminants exceed the agreed-upon maximum level allowed in safe drinking water. The data provides a longer-term view of the history of violations in a specific geographic area, at a particular water well, or from a regulated water system.
 					</p>
 				</div>
 			</div>
