Add logo to the About modal header

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,11 @@
 		</div>
 		<div id="about" class="ui modal">
 			<i class="close icon"></i>
-			<div class="header">
-				<i class="circular green leaf icon"></i>
-				About This Site
+			<div class="ui header">
+				<img class="ui image" src="/images/logo-modal.png" />
+				<div class="content">
+					About This Site
+				</div>
 			</div>
 			<div class="content">
 				<p>
