Better space the About button
Ref #65.

--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,14 @@
 
 	<body>
 		<div class="ui top-header">
-			<div class="ui two column grid">
+			<div class="ui two column grid" style="padding: 0;">
 				<div class="column">
 					<a href="/">
 						<img class="ui image" src="/images/logo-app.png" style="max-height: 80px;" />
 					</a>
 				</div>
-				<div class="column" style="text-align: right;">
-					<div id="about-link" tabindex="0" class="ui small inverted about basic button">
+				<div class="column about-wrapper" style="text-align: right;">
+					<div id="about-link" tabindex="0" class="ui small inverted basic button">
 						About This Site
 					</div>
 				</div>
