--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
 
 		<script src="/app/js/index.js"></script>
 		<link rel="stylesheet" href="/css/custom.css" type="text/css">
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-47518984-5', 'epa-digital-services-rfi.srarad.com');
+		</script>
 	</head>
 
 	<body>
